fix(scroll): hide horizontal scrollbar

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -23,6 +23,11 @@ $white: #fff;
   gap: 20px;
   padding: 10px 40px;
   scroll-behavior: smooth;
+
+  scrollbar-width: none; 
+  &::-webkit-scrollbar { 
+    display: none; 
+  }
 }
 
 .carousel__arrow {
